--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.12.2",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
