--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "mongoose": "^5.12.2",
+    "noty": "^3.2.0-beta-deprecated",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
