--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/runtime": "^7.13.10",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
