--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.13.10",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
@@ -29,6 +30,8 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.12.2",
     "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
